--- a/main.html
+++ b/main.html
@@ -9,8 +9,8 @@
 <body>
 
   <div class="container">
-    <p><span id="counter">0</span></p>
-    <button onclick="incrementCounter()">Increment</button>
+    <p id="counter">0</p>
+    <button id="incrementBtn">Increment</button>
   </div>
 
   <script src="script.js"></script>
